force-app/main/default/objects/Survey__c/fields/Response_Received__c.field-meta.xml
<CustomField>
    <fullName>Response_Received__c</fullName>
    <formula>IF(  NOT(ISBLANK(ReportCard__r.Response_received__c)) , true,  false)</formula>
    <label>Response Received</label>
    <type>Checkbox</type>
</CustomField>