force-app/main/default/objects/Survey__c/fields/Response_Received_On__c.field-meta.xml
<CustomField>
    <fullName>Response_Received_On__c</fullName>
    <formula>ReportCard__r.Response_received__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Response Received On</label>
    <type>DateTime</type>
</CustomField>