force-app/main/default/objects/Survey__c/fields/Survey_Sent_On__c.field-meta.xml
<CustomField>
    <fullName>Survey_Sent_On__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Survey Sent On</label>
    <type>DateTime</type>
</CustomField>